--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <!--Header, should be on all templates-->
 
 <div th:fragment="header">
@@ -14,6 +14,7 @@
                 <a class='btn' id="personnal-menu-button" href='#' data-activates='personnal'>
                     <span sec:authentication="principal.user.firstname"></span>
                     <span sec:authentication="principal.user.lastname"></span>
+                    <span sec:authentication="principal.user.picture"></span>
                 </a>
                 <!-- Dropdown Structure -->
                 <ul id='personnal-menu' class='dropdown-content'>
@@ -168,11 +169,9 @@
         </ul>
         <!--Test Personnal menu-->
         <ul id="personnal" class="side-nav">
-            <li><div class="user-view">
-                <div class="background">
-                    <img src="images/office.jpg">
-                </div>
-                <a href="#!user"><img class="circle" src="images/yuna.jpg"></a>
+            <li>
+                <div class="user-view">
+                <!--<a href="#!user"><img class="circle" th:src="@{${'/files/' + ${#authentication.name}}}"></a>-->
                 <a href="#!name">
                     <span class="white-text name">
                         <span sec:authentication="principal.user.firstname"></span>
