--- a/src/main/resources/templates/common/sheetHarvest.html
+++ b/src/main/resources/templates/common/sheetHarvest.html
@@ -5,14 +5,14 @@
                 <table class="bordered highlight responsive-table">
                     <thead>
                     <tr>
-                        <th>ID</th>
-                        <th>Date</th>
-                        <th>Year</th>
-                        <th>Quantity</th>
-                        <th>Quantity per ha</th>
-                        <th>Plot</th>
-                        <th>Resource</th>
-                        <th>Manager</th>
+                        <th><a class="sortable" data-sorted-by="id" href="#">ID</a></th>
+                        <th><a class="sortable" data-sorted-by="date" href="#">Date</a></th>
+                        <th><a class="sortable" data-sorted-by="year" href="#">Year</a></th>
+                        <th><a class="sortable" data-sorted-by="quantity" href="#">Quantity</a></th>
+                        <th><a class="sortable" data-sorted-by="quantityPerHa" href="#">Quantity per ha</a></th>
+                        <th><a class="sortable" data-sorted-by="plot" href="#">Plot</a></th>
+                        <th><a class="sortable" data-sorted-by="resource" href="#">Resource</a></th>
+                        <th><a class="sortable" data-sorted-by="manager" href="#">Manager</a></th>
                     </tr>
                     </thead>
                     <tbody>
@@ -29,12 +29,20 @@
                     </tbody>
                 </table>
                 <div th:fragment="pagination" class="row center-align">
-                    <ul class="pagination">
-                        <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-                        <li th:each="i:${#numbers.sequence(0, harvests.totalPages -1)}" class="waves-effect">
-                            <a th:href="@{${url}(page=${i+1})}" th:text="${i+1}"></a>
+                    <ul class="pagination" th:with="urlBuilder=${T(org.springframework.web.servlet.support.ServletUriComponentsBuilder).fromCurrentRequest()}">
+                        <li class="disabled">
+                            <a href="#!">
+                                <i class="material-icons">chevron_left</i>
+                            </a>
                         </li>
-                        <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+                        <li th:each="i:${#numbers.sequence(0, harvests.totalPages -1)}" class="waves-effect">
+                            <a th:href="${urlBuilder.replaceQueryParam('page', i+1).toUriString()}" th:text="${i+1}"></a>
+                        </li>
+                        <li class="waves-effect">
+                            <a href="#!">
+                                <i class="material-icons">chevron_right</i>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
