--- a/src/main/resources/templates/Holding/viewHolding.html
+++ b/src/main/resources/templates/Holding/viewHolding.html
@@ -76,4 +76,5 @@
 </main>
 
 <div th:replace="common/footer :: footer"></div>
+<script th:src="@{/assets/js/utils/load-alerts-comments.js}"></script>
 </html>
