--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,7 +18,7 @@
                     <br />
                     <br />
                     <br />
-                    <span th:text ="${#authentication.principal}"></span>
+                    <span th:text ="${#authentication.principal.user.picture}"></span>
                 </div>
 
             </div>
