--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -6,28 +6,20 @@
 <div th:fragment="header">
     <header>
         <nav>
-            <a href="#" data-activates="slide-out" class="button-collapse grey-text text-darken-3">
-                <i class="material-icons">menu</i>
-            </a>
-            <div class="right drop-pmenu">
-
-                <a class='btn' id="personnal-menu-button" href='#' data-activates='personnal'>
-                    <span sec:authentication="principal.user.firstname"></span>
-                    <span sec:authentication="principal.user.lastname"></span>
-                    <span sec:authentication="principal.user.picture"></span>
-                </a>
-                <!-- Dropdown Structure -->
-                <ul id='personnal-menu' class='dropdown-content'>
-                    <li><a th:href="@{/profile}"><i class="material-icons">perm_identity</i>Profile</a></li>
-                    <li class="divider"></li>
-                    <li>
-                        <form th:action="@{/logout}" method="post">
-                            <!--<input type="submit" value="Sign Out"/>-->
-                            <a type="submit"><i class="material-icons">perm_identity</i>Logout</a>
-                        </form>
-                    </li>
-                </ul>
-
+            <div class="row">
+               <div class="col l6">
+                   <a href="#" data-activates="slide-out" class="button-collapse grey-text text-darken-3">
+                       <i class="material-icons">menu</i>
+                   </a>
+               </div>
+                <div class="col l6 right">
+                    <a id="personnal-menu-button" href='#' data-activates='personnal' class="right valign-wrapper">
+                        <img class="circle user-img" th:src="@{'/files/' + ${#authentication.principal.user.picture}}">
+                        <span sec:authentication="principal.user.firstname"></span>
+                        <span sec:authentication="principal.user.lastname"></span>
+                        <i class="material-icons">arrow_drop_down</i>
+                    </a>
+               </div>
             </div>
         </nav>
        <!-- LEFT MENU-->
@@ -171,7 +163,7 @@
         <ul id="personnal" class="side-nav">
             <li>
                 <div class="user-view">
-                <!--<a href="#!user"><img class="circle" th:src="@{${'/files/' + ${#authentication.name}}}"></a>-->
+                <a href="#!user"><img class="circle" th:src="@{'/files/' + ${#authentication.principal.user.picture}}"></a>
                 <a href="#!name">
                     <span class="white-text name">
                         <span sec:authentication="principal.user.firstname"></span>
