--- a/src/main/resources/templates/User/addUser.html
+++ b/src/main/resources/templates/User/addUser.html
@@ -8,7 +8,7 @@
         <div class="col l12 m12 s12">
             <div class="panel6">
                 <div class="panel_title">
-                    <h2>Add a user</h2>
+                    <h2>Add a userCustom</h2>
                 </div>
                 <form action="#" th:action="@{/user/add/}" th:object="${userDTO}" method="post" class="col s12" enctype="multipart/form-data">
                     <div class="row">
