--- a/src/main/resources/templates/Alert/alertComment.html
+++ b/src/main/resources/templates/Alert/alertComment.html
@@ -5,13 +5,13 @@
 
     <div class="">
         <div class="row">
-            <form th:object="${newComment}" method="post" class="col s12" id="newAlertComment" th:data-alert-id="${newComment.alert.id}">
-                <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
-                <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
+            <form th:object="${newComment}" method="post" class="col s12 newAlertComment" id="newAlertComment" th:data-alert-id="${newComment.alert.id}" th:action="@{'/alert/view/'+ ${newComment.alert.id} + '/save-alert-comment/'}">
+                <meta th:id="'_csrf-'+ ${newComment.alert.id}" name="_csrf" th:content="${_csrf.token}"/>
+                <meta th:id="'_csrf_header-'+ ${newComment.alert.id}" name="_csrf_header" th:content="${_csrf.headerName}"/>
                 <div class="row">
                     <div class="input-field col l11 m11 s11">
-                        <img class="prefix circle" th:src="@{'/files/' + ${#authentication.principal.userCustom.picture}}">
-                        <textarea id="commentContent" type="text" class="validate submit-enter" th:field="*{commentContent}"></textarea>
+                        <img class="prefix circle" th:src="@{'/files/' + ${#authentication.principal.picture}}">
+                        <textarea id="commentContent" type="text" class="validate submit-enter materialize-textarea" th:field="*{commentContent}"></textarea>
                         <label for="commentContent">Your Comment...</label>
                     </div>
                     <div class="input-field col l1 m1 s1">
