--- a/src/main/resources/templates/User/profile.html
+++ b/src/main/resources/templates/User/profile.html
@@ -113,7 +113,7 @@
                             </td>
                             <td>
                                 <span th:each="role : ${userCustom.roles}">
-                                    <span class="new badge" data-badge-caption="" th:text="${role.name}">
+                                    <span class="new badge" data-badge-caption="" th:text="${role.id}">
 
                                     </span>
                                 </span>
